# particle-life-wasm

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: pages.yaml
assets/: index-CaQFYpWn.js  index-DdJ0Th8q.js  index-DxtNKr5Z.js  index-QOVZDihx.js  index-iyQ7sflO.js  particle_life_wasm_bg-CQDPyJxN.wasm  particle_life_wasm_bg-DhnJD6Ut.wasm  particle_life_wasm_bg-XjN_DK_Y.wasm
libs/particle-life-wasm/: Cargo.toml
libs/particle-life-wasm/src/: lib.rs
libs/particles/: Cargo.toml
libs/particles/src/: explore.rs  lib.rs  pulse.rs  quadtree.rs  repel.rs  scale_time.rs  vec2d.rs
src/: app.ts  canvas.ts  gui.ts  main.ts  particles.ts  settings.ts  utils.ts
