[workspace]
members = [
    "libs/*",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["dickloraine"]
description = "An implemantation of particle life with wasm bindings"
license = "MIT"
readme = "README.md"
repository = "https://github.com/test"

[profile.release]
opt-level = 2
