[package]
name = "particle-life-wasm"
description = "wasm bindings for particle life"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
serde = "^1.0"
serde-wasm-bindgen = "^0.4"
rand = "0.9"
rand_chacha = "0.9.0"
getrandom = { version = "0.3.1", features = ["wasm_js"] }

particles = { path = "../particles" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[features]
dev = ["console_error_panic_hook"]
